# CFD_Final_Project

./: .gitignore  CFD6145_Final_Project.code-workspace  CMakeLists.txt
.fmod/: geometry.mod  grid_type.mod
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/src/: Makefile  cmake_install.cmake
cmake/macros/: add_test_target.txt  test_compiler.txt
dump/: dump.f90  geometry.mod  grid_type.mod  launch.json  nozz  nozz-dump.gcda  nozz-dump.gcno  set_constants.mod  set_inputs.mod  set_precision.mod
src/: CMakeLists.txt  Init.f90  MMS_functions.f90  airfoil_boundary.f90  fluid_constants.f90  flux.f90  geometry.f90  grid_type.f90  grid_type.mod  inlet_boundary.f90  limiters.f90  main.f90  mms_boundary.f90  mms_constants.f90  residual_io.f90  set_constants.f90  set_inputs.f90  set_inputs.mod  set_precision.f90  set_precision.mod  soln_type.f90  soln_type.mod  time_module.f90  variable_conversion.f90  variable_conversion.mod
